syntax = "proto3";


package proto;

option go_package = ".;v1";




message RegisterStatemReq { 
    
}




message RegisterStatemResp {

}


message ReportStatusReq {

}

message ReportStatusResp {
    
}



service Placement {
    rpc Register(RegisterStatemReq) returns (RegisterStatemResp);
    rpc RepotStatus(stream ReportStatusReq) returns (stream ReportStatusResp);
}

